# reactos

base/setup/lib/: setuplib.c
base/shell/explorer/: traywnd.cpp
dll/directx/wine/d3dx9_36/: mesh.c  util.c
dll/win32/msgina/: resource.h  shutdown.c
dll/win32/msgina/lang/: bg-BG.rc  cs-CZ.rc  de-DE.rc  en-US.rc  es-ES.rc  fr-FR.rc  he-IL.rc  hu-HU.rc  id-ID.rc  it-IT.rc  ja-JP.rc  no-NO.rc  pl-PL.rc  pt-PT.rc  ro-RO.rc  ru-RU.rc  sk-SK.rc  sq-AL.rc  tr-TR.rc  uk-UA.rc  zh-CN.rc  zh-TW.rc
dll/win32/setupapi/: devinst.c
dll/win32/shell32/dialogs/: dialogs.cpp  drive.cpp
drivers/usb/usbhub/: pnp.c
drivers/wdf/wdfldr/: common.h  wdfldr.c
hal/halx86/: CMakeLists.txt  apic.cmake  pc98.cmake  pic.cmake  xbox.cmake
hal/halx86/amd64/: halinit.c
hal/halx86/apic/: halinit.c  processor.c
hal/halx86/minihal/: CMakeLists.txt  halinit.c
hal/halx86/pic/: halinit_mini.c  processor.c
hal/halx86/up/: halinit_mini.c
media/doc/: 3rd Party Files.txt
modules/rostests/winetests/d3dx9_36/: effect.c
ntoskrnl/io/pnpmgr/: devaction.c  pnpirp.c
sdk/cmake/: CMakeMacros.cmake
sdk/tools/winesync/: d3dx9.cfg
sdk/tools/winesync/d3dx9_staging/: 0002-d3dx9_36__Add_format_description_for_X8L8V8U8_for_format_conversions.diff  0003-d3dx9_36__Improve_stub_for_ID3DXEffectImpl_CloneEffect.diff  0004-d3dx9_36__Implement_D3DXDisassembleShader._(v2).diff  0007-d3dx9_36__Add_semi-stub_for_D3DXOptimizeVertices.diff  0008-d3dx9____Add_D3DXSHProjectCubeMap_stub.diff  0009-d3dx9__Implement_D3DXComputeTangent.diff  0013-d3dx9_36__No_need_to_fail_if_we_don_t_support_vertices_reordering_in_D3DXMESHOPT_ATTRSORT.diff
